# super-mario_-qt_-cpp

./: README.md
最终迭代/: mario操作契约.docx  mario结构文档.docx  需求文档.docx
最终迭代/源代码/: Background.cpp  Background.h  Block.cpp  Block.h  Box.cpp  Box.h  Brick.cpp  Brick.h  BrickDebris.cpp  BrickDebris.h  CMakeLists.txt  CMakeLists.txt.user.3456e61.4.8-pre1  Castle.cpp  Castle.h  CoinSpawnable.cpp  CoinSpawnable.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Flower.cpp  Flower.h  Game.cpp  Game.h  Goomba.cpp  Goomba.h  Inert.cpp  Inert.h  LevelManager.cpp  LevelManager.h  Mario.cpp  Mario.h  Mushroom.cpp  Mushroom.h  Object.cpp  Object.h  Pipe.cpp  Pipe.h  Piranha.cpp  Piranha.h  (+11 more)
第一次迭代/: mario用例需求.docx  需求文档.docx
第二次迭代/: 用例文本.docx  需求文档.docx
